vm/42sh_tester/public/error_logs/42sh_179
42sh:1:14: [1m[91merror[0m: unexpected end of file
  1  |  echo ""'"'"'""
     |               [1m[91m^[0m
